# TRAS

./: .cursorrules  .gitignore  LICENSE  README.md  email_analysis_results.csv  email_analyzer.py  government_talent.db  integrated_analysis_results.csv  main.py  pyproject.toml  requirements.txt
berts/: VIBE.md  __init__.py  attention.py  bert_model.py  embedding.py  evaluator.py  integration_test.py  optimizer.py  tokenizer.py  tras_integration.py
emails-dev/: 추천 합니다..eml
gpro/: __init__.py  human_feedback.py  integration_test.py  preference_optimizer.py
grpo/: README.md  comparison_study.py  gpro_model.py  openai_validator.py
multiagent/: README.md  VIBE.md  __init__.py  a2a_collaboration.py  demo.py  integration.py  mcp.py  multi_agent_system.py  tras_agents.py
scripts/: README.md  __init__.py  changelog_generator.py  github_release.py  release.py  version_manager.py
slides/: README.md  main.md  section1_tras_intro.md  section2_nlp_basics.md  section4_rlhf_gpro.md  section4_rlhf_grpo.md  section5_summary_quiz.md  section6_multiagent_cooperation.md
